--- a/templates/show.html
+++ b/templates/show.html
@@ -16,6 +16,7 @@
     <th>Department</th>
     <th>Doctor</th>
     <th>Message</th>
+    <th>Actions</th>
 </tr>
 
 
@@ -28,6 +29,13 @@
     <td>{{ appointment.department }}</td>
     <td>{{ appointment.doctor }}</td>
     <td>{{ appointment.message }}</td>
+    <td>
+
+        <a href="/edit/{{appointment.id}}" class = "btn btn-outline-warning">Edit</a>
+        <a href="/delete/{{appointment.id}}" class="btn btn-outline-danger">Delete</a>
+
+
+    </td>
 </tr>
 
 
